inserted mega menu

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/8ae592a67f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/index.css">
   <link rel="stylesheet" href="CSS/queries.css">
   <title>PHP Snippets
 
@@ -43,27 +44,68 @@
               <a class="nav-link active " aria-current="page" href="installation.html">Installation</a>
             </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Tutorials
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">PHP Syntax</a></li>
-                <li><a class="dropdown-item" href="#">PHP Variables</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+            <li class=" menu-item-has-children">
+              <a href="#">Tutorials <i class="fa fa-angle-down"></i></a>
+              <div class="sub-menu mega-menu mega-menu-column-4">
+                <div class="list-item">
+                  <h4 class="title">PHP Data Types</h4>
+                  <ul>
+                    <li><a href="#">Integer</a></li>
+                    <li><a href="#">String</a></li>
+                    <li><a href="#">Boolean</a></li>
+                    <li><a href="#">Boolean</a></li>
+                    <li><a href="#">Object</a></li>
+                    <li><a href="#">Null</a></li>
+                    <li><a href="#">Resource</a></li>
+                  </ul>
+
+                  <ul>
+                    <li><a href="#">PHP Variables</a></li>
+                    <li><a href="#">PHP Echo/Print</a></li>
+                    <li><a href="#">PHP Numbers</a></li>
+                    <li><a href="#">PHP Math</a></li>
+                  </ul>
+                </div>
+                <div class="list-item">
+
+                  <ul>
+                    <li><a href="#">PHP Operators</a></li>
+                    <li><a href="#">PHP If...Else..Elseif</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                  </ul>
+                  <h4 class="title">Furniture</h4>
+                  <ul>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                  </ul>
+                </div>
+                <div class="list-item">
+                  <h4 class="title">Home, Kitchen</h4>
+                  <ul>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                    <li><a href="#">Product List</a></li>
+                  </ul>
+                </div>
+
+              </div>
             </li>
-            <a class="btn login-btn " href="login.php">login</a>
+
 
 
           </ul>
 
         </div>
-
+      </div>
     </nav>
     <div class="hero container">
 
@@ -71,29 +113,17 @@
       <p class="hero-text">One of the programming languages that is easiest to learn is PHP.<br />Here in snippets you
         will learn and deeply understand the basic of PHP language,<br /> Our lessons are specifically design for
         beginners.</p>
-      <a class="btn btn-lg lesson mb-5 " href="tutorial.html"></a>
+      <a class="btn lesson mb-5 " href="tutorial.html">Get Started</a>
     </div>
   </section>
   </section>
-  <section class="info">
-    <div class="container">
-      <h1 class="info-heading">What are the advantages of using PHP?</h1>
-      <div class="row info-row">
-        <div class="col-6 text-center">
-          <img src="images/php screen shot.png" class="img-fluid w-100" alt="">
-        </div>
-        <div class="col-6">
-          <h2 class="info-title">1.Easy and simple to Learn</h2>
-          <p>PHP is considered one of the easiest scripting languages. Compared to other web languages, PHP doesn’t
-            require a manual
-            or intensive studying. PHP syntax is logical and well-organized. Even command functions are easy to
-            understand, as they
-            tell the developer what function they perform. As a result, web developers find it very easy to create and
-            optimize the
-            application.</p>
-        </div>
-      </div>
-    </div>
+
+  </div>
+
+
+
+  </div>
+  </div>
 
   </section>
 
