--- a/installation.html
+++ b/installation.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="CSS/queries.css">
     <link rel="stylesheet" href="CSS/general.css">
     <link rel="stylesheet" href="CSS/textcontent.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <title>PHP Lessons
 
     </title>
@@ -34,7 +34,7 @@
     <div class="container-fluid py-2 px-3">
         <nav class="navbar navbar-expand-lg py-3">
             <div class="container-fluid fixed-top px-5 py-3 bg-light">
-                <a class="navbar-brand" href="#">PHP Snippets.</a>
+                <a class="navbar-brand" href="index.html">PHP Snippets.</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <a class="btn login-btn " href="login.php">login</a>
+                        <a class="btn login-btn " href="login.php">Get Started</a>
 
 
                     </ul>
