--- a/tutorial.html
+++ b/tutorial.html
@@ -29,7 +29,7 @@
     <div class="container-fluid py-2 px-5">
         <nav class="navbar navbar-expand-lg py-3">
             <div class="container-fluid fixed-top px-5 py-3 bg-light">
-                <a class="navbar-brand" href="#">PHP Snippets.</a>
+                <a class="navbar-brand" href="index.html">PHP Snippets.</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
