--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
             <li class="nav-item">
-              <a class="nav-link active " aria-current="page" href="installation.html">Installation</a>
+              <a class="nav-link active " aria-current="page" href="installation.html">Get Started</a>
             </li>
 
             <li class=" menu-item-has-children">
-              <a href="#">Tutorials <i class="fa fa-angle-down"></i></a>
+              <a href="#" class="tutorial-link">Tutorials<span class="fa fa-angle-down"></span></a>
               <div class="sub-menu mega-menu mega-menu-column-4">
                 <div class="list-item">
-                  <h4 class="title">PHP Data Types</h4>
+                  <h4 class="title">PHP Basics</h4>
                   <ul>
-                    <li><a href="#">Integer</a></li>
-                    <li><a href="#">String</a></li>
-                    <li><a href="#">Boolean</a></li>
-                    <li><a href="#">Boolean</a></li>
-                    <li><a href="#">Object</a></li>
-                    <li><a href="#">Null</a></li>
-                    <li><a href="#">Resource</a></li>
+                    <li><a href="#">PHP Integer</a></li>
+                    <li><a href="#">PHP String</a></li>
+                    <li><a href="#">PHP Boolean</a></li>
+
+                    <li><a href="#">PHP Object</a></li>
+                    <li><a href="#">PHP Null</a></li>
+                    <li><a href="#">PHP Resource</a></li>
                   </ul>
 
                   <ul>
@@ -99,7 +99,10 @@
 
               </div>
             </li>
-
+            <form action="" class="d-flex">
+              <input type="text">
+              <button class="btn btn-search" type="submit">Search</button>
+            </form>
 
 
           </ul>
@@ -108,29 +111,248 @@
       </div>
     </nav>
     <div class="hero container">
+      <h1 class="hero-title">A PHP tutorial <br> <span>for bootcamp students</span> </h1>
+      <p class="hero-text">One of the programming languages that is easiest to learn is PHP.
+      <p class="hero-text">Here in snippets
+        you
+        will learn and deeply understand the basic of PHP language.</p>
+      <p class="hero-text">Our lessons are specifically design for beginners.</p>
+      </p>
 
-      <h1 class="hero-title">Learn <span>PHP</span>!</h1>
-      <p class="hero-text">One of the programming languages that is easiest to learn is PHP.<br />Here in snippets you
-        will learn and deeply understand the basic of PHP language,<br /> Our lessons are specifically design for
-        beginners.</p>
-      <a class="btn lesson mb-5 " href="tutorial.html">Get Started</a>
+      <div class="row text-center
+        btn-div">
+        <div class="col mb-3 sm-text-center md-text-end">
+          <a class="btn lesson" href="tutorial.html">Get Started</a>
+        </div>
+
+
+      </div>
+
+    </div>
+
+
+
+
+  </section>
+
+
+
+
+
+  <section class="featured">
+    <div class="container">
+
+      <div class="logos row text-center">
+        <div class="col-12 mb-3 col-md-2">
+          <img src="images/Facebook-logo.png" alt="facebook-logo">
+        </div>
+        <div class="col-12 mb-3 col-md-2">
+          <img src="images/Slack-Logo-2013-2019.png" alt="Slack-logo">
+        </div>
+        <div class="col-12 mb-3 col-md-2">
+          <img src="images/mailchimp.png" alt="mailchimp-logo">
+        </div>
+        <div class="col-12 mb-3 col-md-2">
+          <img src="images/Tumblr-logo.png" alt="tumblr-logo">
+        </div>
+        <div class="col-12 mb-3 col-md-2">
+          <img src="images/etsy.png" alt="etsy-logo">
+        </div>
+
+
+
+
+      </div>
+    </div>
+
+  </section>
+  <section class="advantages mt-5">
+    <div class="container ">
+      <h2 class="text-center advantage-heading">Advantages of using PHP</h2>
+      <div class=" row advantage-card">
+        <div class="col col-lg-6  column">
+          <img src="images/Easy and simple.jpg" alt="" class="img-fluid">
+
+        </div>
+        <div class="colsm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title"> Easy and Simple to learn</h1>
+          <p>
+            PHP is considered one of the easiest scripting languages. Compared to other web languages, PHP doesn’t
+            require a manual
+            or intensive studying. PHP syntax is logical and well-organized. Even command functions are easy to
+            understand, as they
+            tell the developer what function they perform.
+          <p>As a result, web developers find it very easy to create and
+            optimize the
+            application.</p>
+          </p>
+
+
+        </div>
+      </div>
+      <div class=" row advantage-card">
+        <div class="col-sm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title  ">Extremely Flexible</h1>
+          <p>
+            PHP is highly flexible whether it is during an ongoing project or after completing the project. Flexibility
+            in a
+            scripting language is very crucial, as functionality can change anytime during the course of a project. The
+            best part
+            about PHP is the ability to make changes even after starting the project and this saves valuable time.
+
+          <p>A developer does not have to write fresh codes or command functions, as changes to the existing codes and
+            functions can
+            be done and used.</p>
+          </p>
+
+
+        </div>
+        <div class="col col-lg-6 column ">
+          <img src="images/Extremely Flexible.jpg" alt="" class="img-fluid">
+
+        </div>
+
+      </div>
+      <div class=" row advantage-card">
+        <div class="col col-lg-6  column">
+          <img src="images/com.png" alt="" class="img-fluid">
+
+        </div>
+        <div class="colsm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title"> Easy Integration and Compatibility</h1>
+          <p>
+            PHP is compatible with a large majority of operating systems. It can easily run on different platforms,
+            including UNIX,
+            Solaris, and Linux. As it can be integrated without effort with other technologies, such as Java, existing
+            software does
+            not require re-development. This saves time and money.
+          </p>
+
+
+        </div>
+      </div>
+      <div class=" row advantage-card">
+        <div class="col-sm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title  ">Efficient Performance</h1>
+          <p>
+            Depending on how the web developer codes, PHP has the potential to turn in an efficient language. It is
+            scalable when
+            used for writing codes and can also be used for creating a large number of applications. It is the
+            programming language
+            of choice when a website has several web pages.
+
+
+
+        </div>
+        <div class="col col-lg-6 column ">
+          <img src="images/Efficient.png" alt="" class="img-fluid">
+
+        </div>
+
+      </div>
+      <div class=" row advantage-card">
+        <div class="col col-lg-6  column">
+          <img src="images/cost efficient.jpg" alt="" class="img-fluid">
+
+        </div>
+        <div class="colsm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title"> Cost-Efficient</h1>
+          <p>
+            PHP is an open-source web language, hence is completely free. There is no expense involved in purchasing
+            expensive
+            licenses or software. It can work efficiently with different databases, such as MySQL, Apache, and
+            PostgreSQL. The cost
+            of developing a website using PHP is minimal.
+          </p>
+
+
+        </div>
+      </div>
+      <div class=" row advantage-card">
+        <div class="col-sm-12 col-lg-6 column">
+          <h1 class="mb-5 advantage-title  ">Gives Web Developer More Control</h1>
+          <p>
+            Compared to other programming languages, PHP allows the website developer to have more control. Other
+            programming
+            languages are bogged down by long, complicated scripts, but this isn’t true for PHP. A few simple lines of
+            code are
+            sufficient. Furthermore, PHP allows tags, and hence, website developers can add and/or mix HTML tags, making
+            the content
+            extremely dynamic.
+
+            Developers don’t have to worry about placing codes in the right place when using PHP, as it is written
+            between tags.
+            Hence, functions and codes do not have to be written in any specific order, as long as they are within the
+            tags.
+
+
+        </div>
+        <div class="col col-lg-6 column ">
+          <img src="images/control.jpg" alt="" class="img-fluid">
+
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+  <section class="faqs">
+    <div class="container">
+      <h2>FAQS</h2>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Accordion Item #1
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the first item's accordion body.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
+              filled
+              with some actual content.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+              happening
+              here in terms of content, but just filling up the space to make it look, at least at first glance, a bit
+              more
+              representative of how this would look in a real-world application.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
-  </section>
 
-  </div>
-
-
-
-  </div>
-  </div>
-
-  </section>
-
-
-  <footer>
-    <h1>PHP Snippets</h1>
-  </footer>
 
 </body>
 
