added tutorial htmls

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -18,9 +18,9 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/8ae592a67f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/index.css">
-  <link rel="stylesheet" href="CSS/queries.css">
+  <link rel="stylesheet" href="../CSS/general.css">
+  <link rel="stylesheet" href="../CSS/index.css">
+  <link rel="stylesheet" href="../CSS/queries.css">
   <title>PHP Snippets
 
   </title>
@@ -144,24 +144,20 @@
 
       <div class="logos row text-center">
         <div class="col-12 mb-3 col-md-2">
-          <img src="images/Facebook-logo.png" alt="facebook-logo">
+          <img src="../images/Homeimages/Facebook-logo.png" alt="facebook-logo">
         </div>
         <div class="col-12 mb-3 col-md-2">
-          <img src="images/Slack-Logo-2013-2019.png" alt="Slack-logo">
+          <img src="../images/homeimages/Slack-Logo.png" alt="Slack-logo">
         </div>
         <div class="col-12 mb-3 col-md-2">
-          <img src="images/mailchimp.png" alt="mailchimp-logo">
+          <img src="../images/Homeimages/Mailchimp-logo.png" alt="mailchimp-logo">
         </div>
         <div class="col-12 mb-3 col-md-2">
-          <img src="images/Tumblr-logo.png" alt="tumblr-logo">
+          <img src="../images/homeimages/Tumblr-logo.png" alt="tumblr-logo">
         </div>
         <div class="col-12 mb-3 col-md-2">
-          <img src="images/etsy.png" alt="etsy-logo">
+          <img src="../images/homeimages/Etsy-Logo.png" alt="etsy-logo">
         </div>
-
-
-
-
       </div>
     </div>
 
@@ -171,7 +167,7 @@
       <h2 class="text-center advantage-heading">Advantages of using PHP</h2>
       <div class=" row advantage-card">
         <div class="col col-lg-6  column">
-          <img src="images/Easy and simple.jpg" alt="" class="img-fluid">
+          <img src="../images/Homeimages/Easy&Simple.jpg" alt="easy&simple" class="img-fluid">
 
         </div>
         <div class="colsm-12 col-lg-6 column">
@@ -208,14 +204,14 @@
 
         </div>
         <div class="col col-lg-6 column ">
-          <img src="images/Extremely Flexible.jpg" alt="" class="img-fluid">
+          <img src="../images/Homeimages/ExtremelyFlexible.jpg" alt="extremely-flexible" class="img-fluid">
 
         </div>
 
       </div>
       <div class=" row advantage-card">
         <div class="col col-lg-6  column">
-          <img src="images/com.png" alt="" class="img-fluid">
+          <img src="../images/Homeimages/OperatingSytem.png" alt="operating-system" class="img-fluid">
 
         </div>
         <div class="colsm-12 col-lg-6 column">
@@ -245,14 +241,14 @@
 
         </div>
         <div class="col col-lg-6 column ">
-          <img src="images/Efficient.png" alt="" class="img-fluid">
+          <img src="../images/Homeimages/Efficient.png" alt="Efficient" class="img-fluid">
 
         </div>
 
       </div>
       <div class=" row advantage-card">
         <div class="col col-lg-6  column">
-          <img src="images/cost efficient.jpg" alt="" class="img-fluid">
+          <img src="../images/Homeimages/CostEfficient.jpg" alt="cost-efficient" class="img-fluid">
 
         </div>
         <div class="colsm-12 col-lg-6 column">
@@ -288,7 +284,7 @@
 
         </div>
         <div class="col col-lg-6 column ">
-          <img src="images/control.jpg" alt="" class="img-fluid">
+          <img src="../images/Homeimages/Code-control.jpg" alt="" class="img-fluid">
 
         </div>
 
