--- a/Pages/tutorial.html
+++ b/Pages/tutorial.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,21 +16,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../CSS/sidebar.css">
+    <link rel="stylesheet" href="../CSS/queries.css">
+    <link rel="stylesheet" href="../CSS/textcontent.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/general.css">
 
-
-    <link rel="stylesheet" href="CSS/sidebar.css">
-    <link rel="stylesheet" href="CSS/queries.css">
-    <link rel="stylesheet" href="CSS/general.css">
-    <link rel="stylesheet" href="CSS/textcontent.css">
-    <link rel="stylesheet" href="CSS/index.css">
-    <title>PHP Lessons
-
-    </title>
+    <title>Document</title>
 </head>
 
 <body>
-
-    <div class="container-fluid py-2 px-3">
+    <div class="container-fluid py-2 px-5">
         <nav class="navbar navbar-expand-lg py-3">
             <div class="container-fluid fixed-top px-5 py-3 bg-light">
                 <a class="navbar-brand" href="index.html">PHP Snippets.</a>
@@ -60,7 +55,7 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <a class="btn login-btn " href="login.php">Get Started</a>
+                        <a class="btn login-btn " href="login.php">login</a>
 
 
                     </ul>
@@ -98,18 +93,99 @@
                     <li><a href=" index.html">Home</a></li>
                     <li><a href=" installation.html">Installation</a></li>
                     <li><a href="installation.html">Get Started</a></li>
-                    <li><a href="tutorial.html">Tutorial</a></li>
+                    <li>
+
+                    </li>
                 </ul>
             </div>
         </div>
-        <div class="row content-row">
+        <div class="row d-flex content-row">
+
             <div class="col-lg-2 d-none d-lg-block py-5" id="sidebar">
                 <ul>
-                    <li><a href=" index.html">Home</a></li>
                     <li><a href="installation.html">Installation</a></li>
-                    <li><a href="installation.html">Get Started</a></li>
-                    <li><a href="tutorial.html">Tutorial</a></li>
+                    <li><a href="getstarted.html">Get Started</a></li>
+                    <h1>Tutorials</h1>
                 </ul>
+                <ul>
+                    <ul>
+
+
+                        <li class="menu-item">
+                            <a href="../tutorial/Intro.html">PHP Intro</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="../tutorial/Syntax.html">PHP Syntax</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="../tutorial/Variables.html">PHP Variables</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="../tutorial/EchoPrint.html">PHP Echo/Print</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                    </ul>
+                </ul>
+
             </div>
             <div class="col-lg-10 col-sm-12 text-content">
 
@@ -204,6 +280,7 @@
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
