--- a/tutorial/Intro.html
+++ b/tutorial/Intro.html
@@ -16,20 +16,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/sidebar.css">
-    <link rel="stylesheet" href="CSS/queries.css">
-    <link rel="stylesheet" href="CSS/textcontent.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/general.css">
+    <link rel="stylesheet" href="../CSS/general.css">
+    <link rel="stylesheet" href="../CSS/queries.css">
+    <link rel="stylesheet" href="../CSS/textcontent.css">
+    <link rel="stylesheet" href="../CSS/sidebar.css">
+    <link rel="stylesheet" href="../CSS/general.css">
 
-    <title>Document</title>
+    <title>PHP Snippets</title>
 </head>
 
 <body>
     <div class="container-fluid py-2 px-5">
         <nav class="navbar navbar-expand-lg py-3">
             <div class="container-fluid fixed-top px-5 py-3 bg-light">
-                <a class="navbar-brand" href="index.html">PHP Snippets.</a>
+                <a class="navbar-brand" href="../Pages/index.html">PHP Snippets.</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto ">
                         <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="installation.html">Installation</a>
+                            <a class="nav-link active " aria-current="page"
+                                href="../Pages/installation.html">Installation</a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -90,21 +91,11 @@
             <div class="offcanvas-body d-lg-none canvas">
                 <ul>
 
-                    <li><a href=" index.html">Home</a></li>
-                    <li><a href=" installation.html">Installation</a></li>
-                    <li><a href="installation.html">Get Started</a></li>
+                    <li><a href="../Pages/index.html">Home</a></li>
+                    <li><a href="../Pages/installation.html">Installation</a></li>
+                    <li><a href="../Pages/getstarted.html">Get Started</a></li>
                     <li>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown button
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </div>
+
                     </li>
                 </ul>
             </div>
@@ -113,79 +104,84 @@
 
             <div class="col-lg-2 d-none d-lg-block py-5" id="sidebar">
                 <ul>
-                    <h2>PHP Tutorial</h2>
-                    <li class="menu-item">
-                        <a href="">PHP Syntax</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Variables</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Echo/Print</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="">PHP Data Types</a>
-                    </li>
+                    <li><a href="../Pages/installation.html">Installation</a></li>
+                    <li><a href="../Pages/getstarted.html">Get Started</a></li>
+                    <li><a href="../Pages/tutorial.html">Tutorials</a></li>
+                    <ul>
+                        <li class="menu-item nav-active">
+                            <a href="#">PHP Intro</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="tutorial/Syntax.html">PHP Syntax</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Variables</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Echo/Print</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">PHP Data Types</a>
+                        </li>
+                    </ul>
+
                 </ul>
             </div>
             <div class="col-lg-10 col-sm-12 text-content">
