--- a/Pages/index.html
+++ b/Pages/index.html
@@ -41,64 +41,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
             <li class="nav-item">
-              <a class="nav-link active " aria-current="page" href="installation.html">Get Started</a>
+              <a class="nav-link" aria-current="page" href="installation.html">Installation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="getstarted.html">Get Started</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tutorial" aria-current="page" href="../tutorial/Intro.html">Tutorials</a>
             </li>
 
-            <li class=" menu-item-has-children">
-              <a href="#" class="tutorial-link">Tutorials<span class="fa fa-angle-down"></span></a>
-              <div class="sub-menu mega-menu mega-menu-column-4">
-                <div class="list-item">
-                  <h4 class="title">PHP Basics</h4>
-                  <ul>
-                    <li><a href="#">PHP Integer</a></li>
-                    <li><a href="#">PHP String</a></li>
-                    <li><a href="#">PHP Boolean</a></li>
 
-                    <li><a href="#">PHP Object</a></li>
-                    <li><a href="#">PHP Null</a></li>
-                    <li><a href="#">PHP Resource</a></li>
-                  </ul>
-
-                  <ul>
-                    <li><a href="#">PHP Variables</a></li>
-                    <li><a href="#">PHP Echo/Print</a></li>
-                    <li><a href="#">PHP Numbers</a></li>
-                    <li><a href="#">PHP Math</a></li>
-                  </ul>
-                </div>
-                <div class="list-item">
-
-                  <ul>
-                    <li><a href="#">PHP Operators</a></li>
-                    <li><a href="#">PHP If...Else..Elseif</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                  </ul>
-                  <h4 class="title">Furniture</h4>
-                  <ul>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                  </ul>
-                </div>
-                <div class="list-item">
-                  <h4 class="title">Home, Kitchen</h4>
-                  <ul>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                    <li><a href="#">Product List</a></li>
-                  </ul>
-                </div>
-
-              </div>
-            </li>
             <form action="" class="d-flex">
               <input type="text">
               <button class="btn btn-search" type="submit">Search</button>
@@ -122,7 +74,7 @@
       <div class="row text-center
         btn-div">
         <div class="col mb-3 sm-text-center md-text-end">
-          <a class="btn lesson" href="tutorial.html">Get Started</a>
+          <a class="btn lesson" href="../Pages/getstarted.html">Get Started</a>
         </div>
 
 
@@ -187,7 +139,7 @@
         </div>
       </div>
       <div class=" row advantage-card">
-        <div class="col-sm-12 col-lg-6 column">
+        <div class="col-sm-12  order-1 order-sm-0 col-lg-6 column">
           <h1 class="mb-5 advantage-title  ">Extremely Flexible</h1>
           <p>
             PHP is highly flexible whether it is during an ongoing project or after completing the project. Flexibility
@@ -203,7 +155,7 @@
 
 
         </div>
-        <div class="col col-lg-6 column ">
+        <div class="col  order-0  order-sm-1 col-lg-6 column ">
           <img src="../images/Homeimages/ExtremelyFlexible.jpg" alt="extremely-flexible" class="img-fluid">
 
         </div>
@@ -228,7 +180,7 @@
         </div>
       </div>
       <div class=" row advantage-card">
-        <div class="col-sm-12 col-lg-6 column">
+        <div class="col-sm-12  order-1 order-sm-0 col-lg-6 column">
           <h1 class="mb-5 advantage-title  ">Efficient Performance</h1>
           <p>
             Depending on how the web developer codes, PHP has the potential to turn in an efficient language. It is
@@ -240,7 +192,7 @@
 
 
         </div>
-        <div class="col col-lg-6 column ">
+        <div class="col order-0 order-sm-1 col-lg-6 column ">
           <img src="../images/Homeimages/Efficient.png" alt="Efficient" class="img-fluid">
 
         </div>
@@ -265,7 +217,7 @@
         </div>
       </div>
       <div class=" row advantage-card">
-        <div class="col-sm-12 col-lg-6 column">
+        <div class="col-sm-12 order-1 order-sm-0 col-lg-6 column">
           <h1 class="mb-5 advantage-title  ">Gives Web Developer More Control</h1>
           <p>
             Compared to other programming languages, PHP allows the website developer to have more control. Other
@@ -283,7 +235,7 @@
 
 
         </div>
-        <div class="col col-lg-6 column ">
+        <div class="col col-lg-6 order-0 order-sm-1  column ">
           <img src="../images/Homeimages/Code-control.jpg" alt="" class="img-fluid">
 
         </div>
@@ -348,7 +300,20 @@
       </div>
     </div>
   </section>
-
+  <section class="footer container-fluid">
+    <div class="container footer-div">
+      <div>
+        <h4 class="footer-head">PHP Snippets.</h4>
+        <p>51 Fulltank St. Los Angeles,Philippines</p>
+        <p>Contact us:+63 81800000</p>
+      </div>
+      <div>
+        <h4 class="footer-ref">References</h4>
+        <p>W3Schools</p>
+        <p>PHP.net</p>
+      </div>
+    </div>
+  </section>
 
 </body>
 
