--- a/Pages/installation.html
+++ b/Pages/installation.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../CSS/general.css">
 
 
-    <title>Document</title>
+    <title>PHP Snippets</title>
 </head>
 
 <body>
@@ -107,7 +107,7 @@
                 <ul>
                     <li class="nav-active"><a href="installation.html">Installation</a></li>
                     <li><a href="getstarted.html">Get Started</a></li>
-                    <li><a href="tutorial.html">Tutorials</a></li>
+                    <li><a href="../tutorial/Intro.html">Tutorials</a></li>
 
 
                 </ul>
